--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,9 @@
 
   <exec_depend>rtabmap_ros</exec_depend>
 
+  <depend>pcl_conversions</depend>
+  <depend>pcl_ros</depend>
+
   <export>
     <!-- Other tools can request additional information be placed here -->
   </export>
